Ensure the matrix toggle button is not visible when printing the resume

--- a/style/print-resume.css
+++ b/style/print-resume.css
@@ -10,7 +10,9 @@
     .resume-buttons,
     .go-to-top-button-container,
     footer,
-    .softuni-svg{
+    .softuni-svg,
+    #matrix-toggle-btn,
+    #matrix-alert {
         display: none;
     }
 
